fix hero section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 section {
-  padding: 1.26rem 1.4rem;
+  padding: 1.4rem 1.68rem;
+  margin-bottom: 1.4rem;
 }
 
 h1,
@@ -40,13 +41,16 @@ input {
 .title {
   margin: 1.4rem 0;
   padding: 0 1.4rem;
-  position: relative;
+  width: 100%;
+  position: absolute;
   z-index: 0;
   display: flex;
   justify-content: space-between;
 }
 .title h1 {
+  margin-bottom: 0;
   max-width: 70%;
+  font-size: 1.1666666667rem;
 }
 
 @media only screen and (min-width: 534px) {
@@ -207,26 +211,38 @@ article {
   width: 100%;
 }
 
-.header-display {
+.section-hero {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+}
+
+.hero-display {
   word-wrap: normal;
   font-size: 2.8rem;
 }
 
-.header-display\:small {
+.hero-display\:small {
   word-wrap: normal;
 }
 
-@media only screen and (min-width: 950px) {
-  main {
-    max-width: 70%;
-    margin-left: 10%;
-    margin-right: auto;
+.hero-display_main-text {
+  margin-top: 8vh;
+  max-width: 65%;
+  position: absolute;
+}
+
+@media only screen and (min-width: 900px) {
+  .hero-display_main-text {
+    max-width: 40%;
+    margin-top: 0;
   }
 }
 @media only screen and (min-width: 1250px) {
-  main {
-    max-width: 50%;
-    margin-left: 20%;
+  .hero-display_main-text {
+    max-width: 20%;
   }
 }
 .hidden {
